src/cos/lang/legata/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALL
    AMPERSAND
    ANY
    COMMENT
    DESCRIPTION
    DIVIDE
    IMPORT
    MINUS
    MODULO
    MULTIPLY
    OP_AND
    OP_EQUALS
    OP_NOT
    OP_OR
    PLUS

Grammar

Rule 0     S' -> rule
Rule 1     rule -> blocks
Rule 2     blocks -> null_clause
Rule 3     blocks -> code_blocks
Rule 4     code_blocks -> declaration
Rule 5     code_blocks -> line_indicator
Rule 6     code_blocks -> code_blocks declaration
Rule 7     declaration -> global_definitions
Rule 8     declaration -> global_precedents
Rule 9     declaration -> global_defaults
Rule 10    declaration -> global_conditions
Rule 11    declaration -> global_clauses
Rule 12    global_precedents -> precedents
Rule 13    global_conditions -> conditions
Rule 14    global_clauses -> clauses
Rule 15    global_definitions -> definitions
Rule 16    global_defaults -> defaults
Rule 17    clauses -> clause
Rule 18    clauses -> clauses clause
Rule 19    clause -> clause_keyword LBRACE STRING RBRACE COLON BLOCKSTART clause_statements BLOCKEND
Rule 20    clause_keyword -> CLAUSE
Rule 21    clause_statements -> clause_statement
Rule 22    clause_statements -> clause_statements clause_statement
Rule 23    clause_statement -> COLON clause_body
Rule 24    clause_body -> BLOCKSTART conditions exclusions assurances contradictions BLOCKEND
Rule 25    assurances -> <empty>
Rule 26    assurances -> ASSURE COLON BLOCKSTART assurance_statements BLOCKEND
Rule 27    assurance_statements -> assurance_statement
Rule 28    assurance_statements -> assurance_statements assurance_statement
Rule 29    assurance_statement -> COLON action_commands
Rule 30    assurance_statement -> COLON assurance_expressions
Rule 31    assurance_statement -> COLON assurance_call
Rule 32    assurance_statement -> COLON apply_clause
Rule 33    assurance_statement -> COLON assurance_sub_clause
Rule 34    assurance_sub_clause -> clause_body
Rule 35    assurance_expressions -> compound_action
Rule 36    assurance_call -> functional_expression
Rule 37    contradictions -> <empty>
Rule 38    contradictions -> OTHERWISE COLON BLOCKSTART assurance_statements BLOCKEND
Rule 39    compound_action -> action_expression
Rule 40    compound_action -> compound_action AND action_expression
Rule 41    compound_action -> compound_action OR action_expression
Rule 42    action_expression -> expression
Rule 43    action_expression -> functional_expression
Rule 44    action_commands -> FAIL
Rule 45    action_commands -> ABORT
Rule 46    action_commands -> CLEAR
Rule 47    action_commands -> CONTINUE
Rule 48    apply_clause -> APPLY STRING
Rule 49    conditions -> CONDITION COLON BLOCKSTART condition_statements BLOCKEND
Rule 50    exclusions -> null_clause
Rule 51    exclusions -> exclusion_clause
Rule 52    null_clause -> <empty>
Rule 53    exclusion_clause -> EXCLUDE COLON BLOCKSTART condition_statements BLOCKEND
Rule 54    condition_statements -> condition
Rule 55    condition_statements -> condition_statements condition
Rule 56    condition -> COLON expression
Rule 57    precedents -> precedent_keyword LBRACE STRING RBRACE COLON BLOCKSTART clause_statements BLOCKEND
Rule 58    precedent_keyword -> PRECEDENT
Rule 59    definitions -> DEFINE COLON BLOCKSTART pairs BLOCKEND
Rule 60    defaults -> DEFAULT COLON BLOCKSTART pairs BLOCKEND
Rule 61    expression -> simple_expression
Rule 62    expression -> compound_expression
Rule 63    simple_expression -> expression_statement
Rule 64    compound_expression -> scoped_expression
Rule 65    compound_expression -> compound_expression AND scoped_expression
Rule 66    compound_expression -> compound_expression OR scoped_expression
Rule 67    scoped_expression -> LPAREN expression_statement RPAREN
Rule 68    scoped_expression -> LPAREN compound_expression RPAREN
Rule 69    expression_statement -> subject_is_object
Rule 70    expression_statement -> subject_is_not_object
Rule 71    expression_statement -> subject_has
Rule 72    expression_statement -> subject_is_range
Rule 73    expression_statement -> subject_in_range
Rule 74    expression_statement -> subject_not_in_range
Rule 75    expression_statement -> subject_comparison
Rule 76    subject_comparison -> subject LT rvalue
Rule 77    subject_comparison -> subject GT rvalue
Rule 78    subject_comparison -> subject LTE rvalue
Rule 79    subject_comparison -> subject GTE rvalue
Rule 80    subject_comparison -> subject EQ rvalue
Rule 81    subject_comparison -> subject NEQ rvalue
Rule 82    subject_is_object -> subject IS rvalue
Rule 83    subject_is_not_object -> subject IS NOT rvalue
Rule 84    subject_has -> subject HAS arg
Rule 85    subject_is_range -> subject IS range_expression
Rule 86    subject_is_range -> subject IS NOT range_expression
Rule 87    subject_in_range -> subject IN range_expression
Rule 88    subject_not_in_range -> subject NOT IN range_expression
Rule 89    rvalue -> object
Rule 90    rvalue -> identifier
Rule 91    rvalue -> number
Rule 92    rvalue -> boolean
Rule 93    rvalue -> constant
Rule 94    rvalue -> functional_expression
Rule 95    range_expression -> array
Rule 96    range_expression -> range
Rule 97    range_expression -> angle
Rule 98    range_expression -> identifier
Rule 99    range -> RANGE LPAREN rvalue COMMA rvalue RPAREN
Rule 100   angle -> ANGLE LPAREN rvalue COMMA rvalue RPAREN
Rule 101   subject -> identifier
Rule 102   subject -> computed_variable
Rule 103   subject -> functional_expression
Rule 104   computed_variable -> intersection_variable
Rule 105   computed_variable -> tuple_variable
Rule 106   computed_variable -> functional_expression
Rule 107   functional_expression -> function LPAREN arglist RPAREN
Rule 108   function -> MATH_ABS
Rule 109   function -> MATH_MIN
Rule 110   function -> MATH_MAX
Rule 111   function -> MATH_FLOOR
Rule 112   function -> MATH_MEAN
Rule 113   function -> MATH_STD
Rule 114   function -> FN_ADD
Rule 115   function -> FN_DEL
Rule 116   function -> FN_SET
Rule 117   function -> FN_ISSET
Rule 118   function -> FN_COUNT
Rule 119   function -> FN_FEETS
Rule 120   function -> FN_METERS
Rule 121   function -> FN_MILES
Rule 122   function -> FN_KMPH
Rule 123   function -> FN_KNOT
Rule 124   function -> FN_NMPHTOKMPH
Rule 125   intersection_variable -> intersection DOT identifier
Rule 126   intersection -> LBRACE valuelist RBRACE
Rule 127   valuelist -> rvalue
Rule 128   valuelist -> valuelist COMMA rvalue
Rule 129   tuple_variable -> tuple DOT identifier
Rule 130   tuple -> LPAREN rvalue COMMA rvalue RPAREN
Rule 131   object -> identifier
Rule 132   object -> EMPTY
Rule 133   array -> LBRACE arglist RBRACE
Rule 134   arglist -> arg
Rule 135   arglist -> arglist COMMA arg
Rule 136   arg -> computed_variable
Rule 137   arg -> identifier
Rule 138   arg -> number
Rule 139   arg -> boolean
Rule 140   arg -> constant
Rule 141   arg -> EMPTY
Rule 142   pairs -> pair
Rule 143   pairs -> pairs COMMA pair
Rule 144   pair -> key COLON value
Rule 145   key -> IDENTIFIER
Rule 146   value -> identifier
Rule 147   value -> constant
Rule 148   constant -> FLOAT
Rule 149   constant -> INTEGER
Rule 150   constant -> STRING
Rule 151   string -> STRING
Rule 152   identifier -> IDENTIFIER
Rule 153   boolean -> TRUE
Rule 154   boolean -> FALSE
Rule 155   number -> INTEGER
Rule 156   number -> FLOAT
Rule 157   line_indicator -> LINE INTEGER STRING

Terminals, with rules where they appear

ABORT                : 45
ALL                  : 
AMPERSAND            : 
AND                  : 40 65
ANGLE                : 100
ANY                  : 
APPLY                : 48
ASSURE               : 26
BLOCKEND             : 19 24 26 38 49 53 57 59 60
BLOCKSTART           : 19 24 26 38 49 53 57 59 60
CLAUSE               : 20
CLEAR                : 46
COLON                : 19 23 26 29 30 31 32 33 38 49 53 56 57 59 60 144
COMMA                : 99 100 128 130 135 143
COMMENT              : 
CONDITION            : 49
CONTINUE             : 47
DEFAULT              : 60
DEFINE               : 59
DESCRIPTION          : 
DIVIDE               : 
DOT                  : 125 129
EMPTY                : 132 141
EQ                   : 80
EXCLUDE              : 53
FAIL                 : 44
FALSE                : 154
FLOAT                : 148 156
FN_ADD               : 114
FN_COUNT             : 118
FN_DEL               : 115
FN_FEETS             : 119
FN_ISSET             : 117
FN_KMPH              : 122
FN_KNOT              : 123
FN_METERS            : 120
FN_MILES             : 121
FN_NMPHTOKMPH        : 124
FN_SET               : 116
GT                   : 77
GTE                  : 79
HAS                  : 84
IDENTIFIER           : 145 152
IMPORT               : 
IN                   : 87 88
INTEGER              : 149 155 157
IS                   : 82 83 85 86
LBRACE               : 19 57 126 133
LINE                 : 157
LPAREN               : 67 68 99 100 107 130
LT                   : 76
LTE                  : 78
MATH_ABS             : 108
MATH_FLOOR           : 111
MATH_MAX             : 110
MATH_MEAN            : 112
MATH_MIN             : 109
MATH_STD             : 113
MINUS                : 
MODULO               : 
MULTIPLY             : 
NEQ                  : 81
NOT                  : 83 86 88
OP_AND               : 
OP_EQUALS            : 
OP_NOT               : 
OP_OR                : 
OR                   : 41 66
OTHERWISE            : 38
PLUS                 : 
PRECEDENT            : 58
RANGE                : 99
RBRACE               : 19 57 126 133
RPAREN               : 67 68 99 100 107 130
STRING               : 19 48 57 150 151 157
TRUE                 : 153
error                : 

Nonterminals, with rules where they appear

action_commands      : 29
action_expression    : 39 40 41
angle                : 97
apply_clause         : 32
arg                  : 84 134 135
arglist              : 107 133 135
array                : 95
assurance_call       : 31
assurance_expressions : 30
assurance_statement  : 27 28
assurance_statements : 26 28 38
assurance_sub_clause : 33
assurances           : 24
blocks               : 1
boolean              : 92 139
clause               : 17 18
clause_body          : 23 34
clause_keyword       : 19
clause_statement     : 21 22
clause_statements    : 19 22 57
clauses              : 14 18
code_blocks          : 3 6
compound_action      : 35 40 41
compound_expression  : 62 65 66 68
computed_variable    : 102 136
condition            : 54 55
condition_statements : 49 53 55
conditions           : 13 24
constant             : 93 140 147
contradictions       : 24
declaration          : 4 6
defaults             : 16
definitions          : 15
exclusion_clause     : 51
exclusions           : 24
expression           : 42 56
expression_statement : 63 67
function             : 107
functional_expression : 36 43 94 103 106
global_clauses       : 11
global_conditions    : 10
global_defaults      : 9
global_definitions   : 7
global_precedents    : 8
identifier           : 90 98 101 125 129 131 137 146
intersection         : 125
intersection_variable : 104
key                  : 144
line_indicator       : 5
null_clause          : 2 50
number               : 91 138
object               : 89
pair                 : 142 143
pairs                : 59 60 143
precedent_keyword    : 57
precedents           : 12
range                : 96
range_expression     : 85 86 87 88
rule                 : 0
rvalue               : 76 77 78 79 80 81 82 83 99 99 100 100 127 128 130 130
scoped_expression    : 64 65 66
simple_expression    : 61
string               : 
subject              : 76 77 78 79 80 81 82 83 84 85 86 87 88
subject_comparison   : 75
subject_has          : 71
subject_in_range     : 73
subject_is_not_object : 70
subject_is_object    : 69
subject_is_range     : 72
subject_not_in_range : 74
tuple                : 129
tuple_variable       : 105
value                : 144
valuelist            : 126 128

Parsing method: LALR

state 0

    (0) S' -> . rule
    (1) rule -> . blocks
    (2) blocks -> . null_clause
    (3) blocks -> . code_blocks
    (52) null_clause -> .
    (4) code_blocks -> . declaration
    (5) code_blocks -> . line_indicator
    (6) code_blocks -> . code_blocks declaration
    (7) declaration -> . global_definitions
    (8) declaration -> . global_precedents
    (9) declaration -> . global_defaults
    (10) declaration -> . global_conditions
    (11) declaration -> . global_clauses
    (157) line_indicator -> . LINE INTEGER STRING
    (15) global_definitions -> . definitions
    (12) global_precedents -> . precedents
    (16) global_defaults -> . defaults
    (13) global_conditions -> . conditions
    (14) global_clauses -> . clauses
    (59) definitions -> . DEFINE COLON BLOCKSTART pairs BLOCKEND
    (57) precedents -> . precedent_keyword LBRACE STRING RBRACE COLON BLOCKSTART clause_statements BLOCKEND
    (60) defaults -> . DEFAULT COLON BLOCKSTART pairs BLOCKEND
    (49) conditions -> . CONDITION COLON BLOCKSTART condition_statements BLOCKEND
    (17) clauses -> . clause
    (18) clauses -> . clauses clause
    (58) precedent_keyword -> . PRECEDENT
    (19) clause -> . clause_keyword LBRACE STRING RBRACE COLON BLOCKSTART clause_statements BLOCKEND
    (20) clause_keyword -> . CLAUSE

    $end            reduce using rule 52 (null_clause -> .)
    LINE            shift and go to state 12
    DEFINE          shift and go to state 18
    DEFAULT         shift and go to state 20
    CONDITION       shift and go to state 21
    PRECEDENT       shift and go to state 23
    CLAUSE          shift and go to state 25

    rule                           shift and go to state 1
    blocks                         shift and go to state 2
    null_clause                    shift and go to state 3
    code_blocks                    shift and go to state 4
    declaration                    shift and go to state 5
    line_indicator                 shift and go to state 6
    global_definitions             shift and go to state 7
    global_precedents              shift and go to state 8
    global_defaults                shift and go to state 9
    global_conditions              shift and go to state 10
    global_clauses                 shift and go to state 11
    definitions                    shift and go to state 13
    precedents                     shift and go to state 14
    defaults                       shift and go to state 15
    conditions                     shift and go to state 16
    clauses                        shift and go to state 17
    precedent_keyword              shift and go to state 19
    clause                         shift and go to state 22
    clause_keyword                 shift and go to state 24

state 1

    (0) S' -> rule .



state 2

    (1) rule -> blocks .

    $end            reduce using rule 1 (rule -> blocks .)


state 3

    (2) blocks -> null_clause .

    $end            reduce using rule 2 (blocks -> null_clause .)


state 4

    (3) blocks -> code_blocks .
    (6) code_blocks -> code_blocks . declaration
    (7) declaration -> . global_definitions
    (8) declaration -> . global_precedents
    (9) declaration -> . global_defaults
    (10) declaration -> . global_conditions
    (11) declaration -> . global_clauses
    (15) global_definitions -> . definitions
    (12) global_precedents -> . precedents
    (16) global_defaults -> . defaults
    (13) global_conditions -> . conditions
    (14) global_clauses -> . clauses
    (59) definitions -> . DEFINE COLON BLOCKSTART pairs BLOCKEND
    (57) precedents -> . precedent_keyword LBRACE STRING RBRACE COLON BLOCKSTART clause_statements BLOCKEND
    (60) defaults -> . DEFAULT COLON BLOCKSTART pairs BLOCKEND
    (49) conditions -> . CONDITION COLON BLOCKSTART condition_statements BLOCKEND
    (17) clauses -> . clause
    (18) clauses -> . clauses clause
    (58) precedent_keyword -> . PRECEDENT
    (19) clause -> . clause_keyword LBRACE STRING RBRACE COLON BLOCKSTART clause_statements BLOCKEND
    (20) clause_keyword -> . CLAUSE

    $end            reduce using rule 3 (blocks -> code_blocks .)
    DEFINE          shift and go to state 18
    DEFAULT         shift and go to state 20
    CONDITION       shift and go to state 21
    PRECEDENT       shift and go to state 23
    CLAUSE          shift and go to state 25

    declaration                    shift and go to state 26
    global_definitions             shift and go to state 7
    global_precedents              shift and go to state 8
    global_defaults                shift and go to state 9
    global_conditions              shift and go to state 10
    global_clauses                 shift and go to state 11
    definitions                    shift and go to state 13
    precedents                     shift and go to state 14
    defaults                       shift and go to state 15
    conditions                     shift and go to state 16
    clauses                        shift and go to state 17
    precedent_keyword              shift and go to state 19
    clause                         shift and go to state 22
    clause_keyword                 shift and go to state 24

state 5

    (4) code_blocks -> declaration .

    DEFINE          reduce using rule 4 (code_blocks -> declaration .)
    DEFAULT         reduce using rule 4 (code_blocks -> declaration .)
    CONDITION       reduce using rule 4 (code_blocks -> declaration .)
    PRECEDENT       reduce using rule 4 (code_blocks -> declaration .)
    CLAUSE          reduce using rule 4 (code_blocks -> declaration .)
    $end            reduce using rule 4 (code_blocks -> declaration .)


state 6

    (5) code_blocks -> line_indicator .

    DEFINE          reduce using rule 5 (code_blocks -> line_indicator .)
    DEFAULT         reduce using rule 5 (code_blocks -> line_indicator .)
    CONDITION       reduce using rule 5 (code_blocks -> line_indicator .)
    PRECEDENT       reduce using rule 5 (code_blocks -> line_indicator .)
    CLAUSE          reduce using rule 5 (code_blocks -> line_indicator .)
    $end            reduce using rule 5 (code_blocks -> line_indicator .)


state 7

    (7) declaration -> global_definitions .

    DEFINE          reduce using rule 7 (declaration -> global_definitions .)
    DEFAULT         reduce using rule 7 (declaration -> global_definitions .)
    CONDITION       reduce using rule 7 (declaration -> global_definitions .)
    PRECEDENT       reduce using rule 7 (declaration -> global_definitions .)
    CLAUSE          reduce using rule 7 (declaration -> global_definitions .)
    $end            reduce using rule 7 (declaration -> global_definitions .)


state 8

    (8) declaration -> global_precedents .

    DEFINE          reduce using rule 8 (declaration -> global_precedents .)
    DEFAULT         reduce using rule 8 (declaration -> global_precedents .)
    CONDITION       reduce using rule 8 (declaration -> global_precedents .)
    PRECEDENT       reduce using rule 8 (declaration -> global_precedents .)
    CLAUSE          reduce using rule 8 (declaration -> global_precedents .)
    $end            reduce using rule 8 (declaration -> global_precedents .)


state 9

    (9) declaration -> global_defaults .

    DEFINE          reduce using rule 9 (declaration -> global_defaults .)
    DEFAULT         reduce using rule 9 (declaration -> global_defaults .)
    CONDITION       reduce using rule 9 (declaration -> global_defaults .)
    PRECEDENT       reduce using rule 9 (declaration -> global_defaults .)
    CLAUSE          reduce using rule 9 (declaration -> global_defaults .)
    $end            reduce using rule 9 (declaration -> global_defaults .)


state 10

    (10) declaration -> global_conditions .

    DEFINE          reduce using rule 10 (declaration -> global_conditions .)
    DEFAULT         reduce using rule 10 (declaration -> global_conditions .)
    CONDITION       reduce using rule 10 (declaration -> global_conditions .)
    PRECEDENT       reduce using rule 10 (declaration -> global_conditions .)
    CLAUSE          reduce using rule 10 (declaration -> global_conditions .)
    $end            reduce using rule 10 (declaration -> global_conditions .)


state 11

    (11) declaration -> global_clauses .

    DEFINE          reduce using rule 11 (declaration -> global_clauses .)
    DEFAULT         reduce using rule 11 (declaration -> global_clauses .)
    CONDITION       reduce using rule 11 (declaration -> global_clauses .)
    PRECEDENT       reduce using rule 11 (declaration -> global_clauses .)
    CLAUSE          reduce using rule 11 (declaration -> global_clauses .)
    $end            reduce using rule 11 (declaration -> global_clauses .)


state 12

    (157) line_indicator -> LINE . INTEGER STRING

    INTEGER         shift and go to state 27


state 13

    (15) global_definitions -> definitions .

    DEFINE          reduce using rule 15 (global_definitions -> definitions .)
    DEFAULT         reduce using rule 15 (global_definitions -> definitions .)
    CONDITION       reduce using rule 15 (global_definitions -> definitions .)
    PRECEDENT       reduce using rule 15 (global_definitions -> definitions .)
    CLAUSE          reduce using rule 15 (global_definitions -> definitions .)
    $end            reduce using rule 15 (global_definitions -> definitions .)


state 14

    (12) global_precedents -> precedents .

    DEFINE          reduce using rule 12 (global_precedents -> precedents .)
    DEFAULT         reduce using rule 12 (global_precedents -> precedents .)
    CONDITION       reduce using rule 12 (global_precedents -> precedents .)
    PRECEDENT       reduce using rule 12 (global_precedents -> precedents .)
    CLAUSE          reduce using rule 12 (global_precedents -> precedents .)
    $end            reduce using rule 12 (global_precedents -> precedents .)


state 15

    (16) global_defaults -> defaults .

    DEFINE          reduce using rule 16 (global_defaults -> defaults .)
    DEFAULT         reduce using rule 16 (global_defaults -> defaults .)
    CONDITION       reduce using rule 16 (global_defaults -> defaults .)
    PRECEDENT       reduce using rule 16 (global_defaults -> defaults .)
    CLAUSE          reduce using rule 16 (global_defaults -> defaults .)
    $end            reduce using rule 16 (global_defaults -> defaults .)


state 16

    (13) global_conditions -> conditions .

    DEFINE          reduce using rule 13 (global_conditions -> conditions .)
    DEFAULT         reduce using rule 13 (global_conditions -> conditions .)
    CONDITION       reduce using rule 13 (global_conditions -> conditions .)
    PRECEDENT       reduce using rule 13 (global_conditions -> conditions .)
    CLAUSE          reduce using rule 13 (global_conditions -> conditions .)
    $end            reduce using rule 13 (global_conditions -> conditions .)


state 17

    (14) global_clauses -> clauses .
    (18) clauses -> clauses . clause
    (19) clause -> . clause_keyword LBRACE STRING RBRACE COLON BLOCKSTART clause_statements BLOCKEND
    (20) clause_keyword -> . CLAUSE

  ! shift/reduce conflict for CLAUSE resolved as shift
    DEFINE          reduce using rule 14 (global_clauses -> clauses .)
    DEFAULT         reduce using rule 14 (global_clauses -> clauses .)
    CONDITION       reduce using rule 14 (global_clauses -> clauses .)
    PRECEDENT       reduce using rule 14 (global_clauses -> clauses .)
    $end            reduce using rule 14 (global_clauses -> clauses .)
    CLAUSE          shift and go to state 25

  ! CLAUSE          [ reduce using rule 14 (global_clauses -> clauses .) ]

    clause                         shift and go to state 28
    clause_keyword                 shift and go to state 24

state 18

    (59) definitions -> DEFINE . COLON BLOCKSTART pairs BLOCKEND

    COLON           shift and go to state 29


state 19

    (57) precedents -> precedent_keyword . LBRACE STRING RBRACE COLON BLOCKSTART clause_statements BLOCKEND

    LBRACE          shift and go to state 30


state 20

    (60) defaults -> DEFAULT . COLON BLOCKSTART pairs BLOCKEND

    COLON           shift and go to state 31


state 21

    (49) conditions -> CONDITION . COLON BLOCKSTART condition_statements BLOCKEND

    COLON           shift and go to state 32


state 22

    (17) clauses -> clause .

    CLAUSE          reduce using rule 17 (clauses -> clause .)
    DEFINE          reduce using rule 17 (clauses -> clause .)
    DEFAULT         reduce using rule 17 (clauses -> clause .)
    CONDITION       reduce using rule 17 (clauses -> clause .)
    PRECEDENT       reduce using rule 17 (clauses -> clause .)
    $end            reduce using rule 17 (clauses -> clause .)


state 23

    (58) precedent_keyword -> PRECEDENT .

    LBRACE          reduce using rule 58 (precedent_keyword -> PRECEDENT .)


state 24

    (19) clause -> clause_keyword . LBRACE STRING RBRACE COLON BLOCKSTART clause_statements BLOCKEND

    LBRACE          shift and go to state 33


state 25

    (20) clause_keyword -> CLAUSE .

    LBRACE          reduce using rule 20 (clause_keyword -> CLAUSE .)


state 26

    (6) code_blocks -> code_blocks declaration .

    DEFINE          reduce using rule 6 (code_blocks -> code_blocks declaration .)
    DEFAULT         reduce using rule 6 (code_blocks -> code_blocks declaration .)
    CONDITION       reduce using rule 6 (code_blocks -> code_blocks declaration .)
    PRECEDENT       reduce using rule 6 (code_blocks -> code_blocks declaration .)
    CLAUSE          reduce using rule 6 (code_blocks -> code_blocks declaration .)
    $end            reduce using rule 6 (code_blocks -> code_blocks declaration .)


state 27

    (157) line_indicator -> LINE INTEGER . STRING

    STRING          shift and go to state 34


state 28

    (18) clauses -> clauses clause .

    CLAUSE          reduce using rule 18 (clauses -> clauses clause .)
    DEFINE          reduce using rule 18 (clauses -> clauses clause .)
    DEFAULT         reduce using rule 18 (clauses -> clauses clause .)
    CONDITION       reduce using rule 18 (clauses -> clauses clause .)
    PRECEDENT       reduce using rule 18 (clauses -> clauses clause .)
    $end            reduce using rule 18 (clauses -> clauses clause .)


state 29

    (59) definitions -> DEFINE COLON . BLOCKSTART pairs BLOCKEND

    BLOCKSTART      shift and go to state 35


state 30

    (57) precedents -> precedent_keyword LBRACE . STRING RBRACE COLON BLOCKSTART clause_statements BLOCKEND

    STRING          shift and go to state 36


state 31

    (60) defaults -> DEFAULT COLON . BLOCKSTART pairs BLOCKEND

    BLOCKSTART      shift and go to state 37


state 32

    (49) conditions -> CONDITION COLON . BLOCKSTART condition_statements BLOCKEND

    BLOCKSTART      shift and go to state 38


state 33

    (19) clause -> clause_keyword LBRACE . STRING RBRACE COLON BLOCKSTART clause_statements BLOCKEND

    STRING          shift and go to state 39


state 34

    (157) line_indicator -> LINE INTEGER STRING .

    DEFINE          reduce using rule 157 (line_indicator -> LINE INTEGER STRING .)
    DEFAULT         reduce using rule 157 (line_indicator -> LINE INTEGER STRING .)
    CONDITION       reduce using rule 157 (line_indicator -> LINE INTEGER STRING .)
    PRECEDENT       reduce using rule 157 (line_indicator -> LINE INTEGER STRING .)
    CLAUSE          reduce using rule 157 (line_indicator -> LINE INTEGER STRING .)
    $end            reduce using rule 157 (line_indicator -> LINE INTEGER STRING .)


state 35

    (59) definitions -> DEFINE COLON BLOCKSTART . pairs BLOCKEND
    (142) pairs -> . pair
    (143) pairs -> . pairs COMMA pair
    (144) pair -> . key COLON value
    (145) key -> . IDENTIFIER

    IDENTIFIER      shift and go to state 43

    pairs                          shift and go to state 40
    pair                           shift and go to state 41
    key                            shift and go to state 42

state 36

    (57) precedents -> precedent_keyword LBRACE STRING . RBRACE COLON BLOCKSTART clause_statements BLOCKEND

    RBRACE          shift and go to state 44


state 37

    (60) defaults -> DEFAULT COLON BLOCKSTART . pairs BLOCKEND
    (142) pairs -> . pair
    (143) pairs -> . pairs COMMA pair
    (144) pair -> . key COLON value
    (145) key -> . IDENTIFIER

    IDENTIFIER      shift and go to state 43

    pairs                          shift and go to state 45
    pair                           shift and go to state 41
    key                            shift and go to state 42

state 38

    (49) conditions -> CONDITION COLON BLOCKSTART . condition_statements BLOCKEND
    (54) condition_statements -> . condition
    (55) condition_statements -> . condition_statements condition
    (56) condition -> . COLON expression

    COLON           shift and go to state 46

    condition_statements           shift and go to state 47
    condition                      shift and go to state 48

state 39

    (19) clause -> clause_keyword LBRACE STRING . RBRACE COLON BLOCKSTART clause_statements BLOCKEND

    RBRACE          shift and go to state 49


state 40

    (59) definitions -> DEFINE COLON BLOCKSTART pairs . BLOCKEND
    (143) pairs -> pairs . COMMA pair

    BLOCKEND        shift and go to state 50
    COMMA           shift and go to state 51


state 41

    (142) pairs -> pair .

    BLOCKEND        reduce using rule 142 (pairs -> pair .)
    COMMA           reduce using rule 142 (pairs -> pair .)


state 42

    (144) pair -> key . COLON value

    COLON           shift and go to state 52


state 43

    (145) key -> IDENTIFIER .

    COLON           reduce using rule 145 (key -> IDENTIFIER .)


state 44

    (57) precedents -> precedent_keyword LBRACE STRING RBRACE . COLON BLOCKSTART clause_statements BLOCKEND

    COLON           shift and go to state 53


state 45

    (60) defaults -> DEFAULT COLON BLOCKSTART pairs . BLOCKEND
    (143) pairs -> pairs . COMMA pair

    BLOCKEND        shift and go to state 54
    COMMA           shift and go to state 51


state 46

    (56) condition -> COLON . expression
    (61) expression -> . simple_expression
    (62) expression -> . compound_expression
    (63) simple_expression -> . expression_statement
    (64) compound_expression -> . scoped_expression
    (65) compound_expression -> . compound_expression AND scoped_expression
    (66) compound_expression -> . compound_expression OR scoped_expression
    (69) expression_statement -> . subject_is_object
    (70) expression_statement -> . subject_is_not_object
    (71) expression_statement -> . subject_has
    (72) expression_statement -> . subject_is_range
    (73) expression_statement -> . subject_in_range
    (74) expression_statement -> . subject_not_in_range
    (75) expression_statement -> . subject_comparison
    (67) scoped_expression -> . LPAREN expression_statement RPAREN
    (68) scoped_expression -> . LPAREN compound_expression RPAREN
    (82) subject_is_object -> . subject IS rvalue
    (83) subject_is_not_object -> . subject IS NOT rvalue
    (84) subject_has -> . subject HAS arg
    (85) subject_is_range -> . subject IS range_expression
    (86) subject_is_range -> . subject IS NOT range_expression
    (87) subject_in_range -> . subject IN range_expression
    (88) subject_not_in_range -> . subject NOT IN range_expression
    (76) subject_comparison -> . subject LT rvalue
    (77) subject_comparison -> . subject GT rvalue
    (78) subject_comparison -> . subject LTE rvalue
    (79) subject_comparison -> . subject GTE rvalue
    (80) subject_comparison -> . subject EQ rvalue
    (81) subject_comparison -> . subject NEQ rvalue
    (101) subject -> . identifier
    (102) subject -> . computed_variable
    (103) subject -> . functional_expression
    (152) identifier -> . IDENTIFIER
    (104) computed_variable -> . intersection_variable
    (105) computed_variable -> . tuple_variable
    (106) computed_variable -> . functional_expression
    (107) functional_expression -> . function LPAREN arglist RPAREN
    (125) intersection_variable -> . intersection DOT identifier
    (129) tuple_variable -> . tuple DOT identifier
    (108) function -> . MATH_ABS
    (109) function -> . MATH_MIN
    (110) function -> . MATH_MAX
    (111) function -> . MATH_FLOOR
    (112) function -> . MATH_MEAN
    (113) function -> . MATH_STD
    (114) function -> . FN_ADD
    (115) function -> . FN_DEL
    (116) function -> . FN_SET
    (117) function -> . FN_ISSET
    (118) function -> . FN_COUNT
    (119) function -> . FN_FEETS
    (120) function -> . FN_METERS
    (121) function -> . FN_MILES
    (122) function -> . FN_KMPH
    (123) function -> . FN_KNOT
    (124) function -> . FN_NMPHTOKMPH
    (126) intersection -> . LBRACE valuelist RBRACE
    (130) tuple -> . LPAREN rvalue COMMA rvalue RPAREN

    LPAREN          shift and go to state 67
    IDENTIFIER      shift and go to state 72
    MATH_ABS        shift and go to state 78
    MATH_MIN        shift and go to state 79
    MATH_MAX        shift and go to state 80
    MATH_FLOOR      shift and go to state 81
    MATH_MEAN       shift and go to state 82
    MATH_STD        shift and go to state 83
    FN_ADD          shift and go to state 84
    FN_DEL          shift and go to state 85
    FN_SET          shift and go to state 86
    FN_ISSET        shift and go to state 87
    FN_COUNT        shift and go to state 88
    FN_FEETS        shift and go to state 89
    FN_METERS       shift and go to state 90
    FN_MILES        shift and go to state 91
    FN_KMPH         shift and go to state 92
    FN_KNOT         shift and go to state 93
    FN_NMPHTOKMPH   shift and go to state 94
    LBRACE          shift and go to state 95

    expression                     shift and go to state 55
    simple_expression              shift and go to state 56
    compound_expression            shift and go to state 57
    expression_statement           shift and go to state 58
    scoped_expression              shift and go to state 59
    subject_is_object              shift and go to state 60
    subject_is_not_object          shift and go to state 61
    subject_has                    shift and go to state 62
    subject_is_range               shift and go to state 63
    subject_in_range               shift and go to state 64
    subject_not_in_range           shift and go to state 65
    subject_comparison             shift and go to state 66
    subject                        shift and go to state 68
    identifier                     shift and go to state 69
    computed_variable              shift and go to state 70
    functional_expression          shift and go to state 71
    intersection_variable          shift and go to state 73
    tuple_variable                 shift and go to state 74
    function                       shift and go to state 75
    intersection                   shift and go to state 76
    tuple                          shift and go to state 77

state 47

    (49) conditions -> CONDITION COLON BLOCKSTART condition_statements . BLOCKEND
    (55) condition_statements -> condition_statements . condition
    (56) condition -> . COLON expression

    BLOCKEND        shift and go to state 96
    COLON           shift and go to state 46

    condition                      shift and go to state 97

state 48

    (54) condition_statements -> condition .

    BLOCKEND        reduce using rule 54 (condition_statements -> condition .)
    COLON           reduce using rule 54 (condition_statements -> condition .)


state 49

    (19) clause -> clause_keyword LBRACE STRING RBRACE . COLON BLOCKSTART clause_statements BLOCKEND

    COLON           shift and go to state 98


state 50

    (59) definitions -> DEFINE COLON BLOCKSTART pairs BLOCKEND .
